PyMaker/datas/object2/RawHTML/i3501/Python_DOC_referPages.scapy-throwing-syntax-error-for-python-2-6-6-application.txt
<div class="post-text" itemprop="text">
<p>I had worked on a program in Python2.7 and need to retool it for Python 2.6.6. I made some minor changes but receive this error when trying to compile. Has anyone ran into this before? I couldn't find very much on Google. Any help would be appreciated</p>
<pre><code> Traceback (most recent call last):
  File "makexml.py", line 13, in &lt;module&gt;
    from scapy.all import rdpcap
  File "/user/.pyenv/versions/2.6.6/lib/python2.6/site- 
  packages/scapy/all.py", line 11, in &lt;module&gt;
    from scapy.config import *
  File "/user/.pyenv/versions/2.6.6/lib/python2.6/site- 
packages/scapy/config.py", line 84
    self.layers = {owner for f in self.fields for owner in f.owners}
                           ^
   SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Set comprehensions are a new feature from Python 3 that <a href="https://docs.python.org/3/whatsnew/2.7.html#python-3-1-features" rel="nofollow noreferrer">got backported to Python 2.7</a>. </p>
<p>So if you try to use one in an earlier version, you get a <code>SyntaxError</code>.</p>
<p>The simplest change is to pass a generator expression to the <code>set</code> constructor:</p>
<pre><code>self.layers = set(owner for f in self.fields for owner in f.owners)
</code></pre>
<p>(This will work all the way back to 2.4. Before that, there's no builtin <code>set</code>, and no generator expressions, but you'd probably have bigger problems with, e.g., exceptions…)</p>
</div>
<div class="post-text" itemprop="text">
<p>Scapy 2.4.0 is not compatible with Python 2.6. You should downgrade Scapy to 2.3.3, which has Python 2.6 (and 2.5, I think) support.</p>
</div>
